--- a/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
+++ b/E-Commerce-Front-End/E-Commerce-App/src/app/navbar/navbar.component.scss
@@ -1,26 +1,12 @@
-#fullNameInNavBar{
-    margin-top: -8px;
-    }
-    p {
-    font-family: Lato;
-    }
+img{
+    width: 25px;
+    height: 25px;;
     
-    .navbar{
-    z-index: 1;
-    }
-    
-    #home{
-      margin-left: 5%;
-    margin-top: 8px;
-    }
-    
-    #login{
-      margin-top: 8px;
-    }
-    img{
-      width: 30px;
-      height: 30px;;
-    }
-    .navbar{
-      background:rgb(66, 103, 178);
-      }
+  }
+  #ppId{
+    margin-top: 7px;
+  }
+
+  #paddingListId{
+    padding-left: 10px;
+  }
